📝 docs: update README with protocol address and delegation dashboard link

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 services:
-  integrity-node:
+  hybrid-node:
     image: buildonhybrid/hybrid-node:latest
     container_name: hybrid-node
     env_file:
